crates/wdl-grammar/tests/parsing/reserved-identifier-1-1/source.wdl
version 1.1

struct Foo {
    String after
    String None
}

task foo {
    input {
        Int after
    }

    meta {
        None: "xyz"
    }

    command <<<>>>
}
